syntax = "proto3";

package com.academy.fintech.scoring.application_processing;

option java_multiple_files = true;

service ScoringDataService{
  rpc getProduct(ProductRequest) returns (ProductResponse);
  rpc getClientAgreements(ClientAgreementsRequest) returns (ClientAgreementsResponse);
  rpc getPaymentAmount(AdvancedPaymentRequest) returns (AdvancedPaymentResponse);
}

message ProductRequest {
  string productCode = 1;
}

message ProductResponse {
  string code = 1;
  int32 minTermInMonths = 2;
  int32 maxTermInMonths = 3;
  string minPrincipalAmount = 4;
  string maxPrincipalAmount = 5;
  string minInterest = 6;
  string maxInterest = 7;
}

message ClientAgreementsRequest {
  string clientId = 1;
}

message ClientAgreementsResponse {
  repeated AgreementResponse agreements = 1;
}

message AgreementResponse {
  string agreementId = 1;
  string nextPaymentDate = 2;
}

message AdvancedPaymentRequest {
  string interest = 1;
  int32 term = 2;
  string disbursementAmount = 3;
}

message AdvancedPaymentResponse {
  string paymentAmount = 1;
}